sf-to-gcp-pubsub/force-app/main/default/objects/GCP_Key__mdt/fields/GPCCacheAccessTokenName__c.field-meta.xml
<CustomField>
    <fullName>GPCCacheAccessTokenName__c</fullName>
    <label>GPC Cache Access Token Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>