sf-to-gcp-pubsub/force-app/main/default/objects/GCP_Key__mdt/fields/Pubsub_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Pubsub_Endpoint__c</fullName>
    <label>Pubsub_Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>