sf-to-gcp-pubsub/force-app/main/default/objects/GCP_Key__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <description>Scopes used to get data from Google</description>
    <inlineHelpText>Comma-separated values</inlineHelpText>
    <label>Scopes</label>
    <type>TextArea</type>
</CustomField>